# PolyUMI

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  PolyUMI-local.code-workspace  README.md  TODO.md  conda_environment.yaml  deploy.sh  main.py  pyproject.toml  ruff.toml  run_slam_pipeline.py  setup_franka_env.sh
.devcontainer/: devcontainer.json
docs/: camera-calibration.md  crb-fr3-inference.md  data-format.md  franka-inference-bringup.md  pi-provisioning.md
inference_server/: pyproject.toml
inference_server/inference_server/: dummy_server.py
ingest/: main.py  pyproject.toml
ingest/config/: gopro_hero12_slam.yaml  gopro_intrinsics.json  gripper_calib.yaml
ingest/foxglove/: review_mcap.json
ingest/integration/: populate_slam_yaml.py  view_slam.py  visualize_slam_alignment.py  visualize_timesync.py
ingest/polyumi_ingest/: __init__.py  config.py  gopro_fetch.py  gpmf_parse.py  main.py  pi_fetch.py  pzarr.py  transforms.py  video_helpers.py
ingest/polyumi_ingest/export/: __init__.py  helpers.py  mcap.py
ingest/polyumi_ingest/export/dp/: __init__.py  buffer.py
ingest/polyumi_ingest/preproc/: __init__.py  _umi_cv_util.py  align_step.py  aruco_step.py  audio_align.py  slam_step.py  so_align_step.py  step_base.py  time_sync.py
ingest/polyumi_ingest/pzarr/: __init__.py  optitrack.py  scene_files.py  store.py  version.py
ingest/test/: test_align_step.py  test_aruco_step.py  test_mcap_aruco.py  test_preproc.py  test_slam_step.py
nominal_polyumi/: .gitignore  app.connect  polyumi.connect  polyumi_connect.py  requirements.txt  ros_connect.py
pi/: alsa_preset  audio_streamer.py  cam_streamer.py  led_manager.py  pi_streamer.py  pyproject.toml
pi/polyumi_pi/: audio_streamer.py  cam_streamer.py  constants.py  led_manager.py  main.py  optitrack.py  pi_streamer.py  raspi_driver.py  sync_chirp.py
pi/polyumi_pi/files/: audio.py  base.py  metadata.py  scene.py  session.py  video.py
pi/polyumi_pi/gopro/: gopro_bringup.py  gopro_config.py  gopro_wrapper.py
pi/test/files/: test_audio.py  test_metadata.py  test_session.py  test_video.py
polytouch_msgs/: package.xml  setup.py
postprocess/: gopro_fetch.py  main.py  pi_fetch.py  pyproject.toml  video_helpers.py
ros2_ws/src/polyumi_pi_msgs/: .gitignore  package.xml  pyproject.toml  setup.cfg  setup.py
ros2_ws/src/polyumi_pi_msgs/polyumi_pi_msgs/: audio_chunk.proto
scripts_slam_pipeline/: 01_extract_gopro_imu.py  (+2 more)
(+20 files in other folders)
