[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inference_server"
version = "0.1.0"
description = "Inference server for PolyUMI diffusion policy"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "numpy>=2.0",
]

[project.scripts]
dummy-server = "inference_server.dummy_server:main"
